menubar is now fixed, content goes behind

--- a/src/App.scss
+++ b/src/App.scss
@@ -91,6 +91,9 @@ body {
 }
 
 #menu-bar {
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
   background-color: $hs-yellow;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
@@ -107,19 +110,9 @@ body {
   }
 
   img.menu-bar-logo {
+    grid-column: -1;
     border-radius: 1em;
     height: 2em;
-  }
-
-  .menu-bar-home {
-    grid-column: 1;
-    grid-row: 1;
-
-    
-
-    &i{
-      margin-top: .2em;
-    }
   }
 
   p {
@@ -168,7 +161,7 @@ body {
 
 #start-page {
   grid-column: 2 / -2;
-  grid-row: 14;
+  grid-row: 18;
 
   .content {
     display: grid;
@@ -211,6 +204,7 @@ body {
 
 .about-container {
   grid-column: 2 / -2;
+  grid-row: 6;
   
   .about-hunger-swype {
     @extend %transparent-container;
@@ -255,6 +249,7 @@ body {
 
 #filter-container {
   grid-column: 2 / -2;
+  grid-row: 6;
 
   .filter-content {
     @extend %transparent-container;
@@ -267,6 +262,7 @@ body {
 }
 
 .match-page-container {
+  grid-row: 6;
   @extend %transparent-container;
   // grid-column is set with media queries
   
@@ -285,6 +281,7 @@ body {
 }
 
 .match-results-container {
+  grid-row: 6;
   //grid colun is set with media queries
 
   .results-listing {
@@ -311,6 +308,7 @@ body {
 }
 
 #recipe-page-container {
+  grid-row: 6;
 
   img { 
     border-radius: 1em;
@@ -344,6 +342,7 @@ body {
 }
 
 #profile-page {
+  grid-row: 6;
 
   .profile-image, 
   .profile-data {
@@ -407,6 +406,7 @@ body {
 }
 
 #login-page {
+  grid-row: 6;
   grid-column: 3 / -3;
 
   .login-content {
